--- a/index.html
+++ b/index.html
@@ -1,66 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>images</title>
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Description" content="this is the page about content about shiva - the sigma">
+    <title>About Shiva - CodeWithShiva</title>
 </head>
-
 <body>
-  <img height="230" src="image.png" alt="Train Image">
-  <br>
-  <Table>
-    <caption>Employee Details</caption>
-
-    <thead>
-      <tr>
-        <th>header</th>
-      </tr>
-    </thead>
-    <tbody>
-
-      <tr>
-        <th>Name</th>
-        <th>Destination</th>
-        <th>Fav langauage</th>
-      </tr>
-
-      <tr>
-        <td colspan="2">Sam</td>
-        <td rowspan="2">Java</td>
-
-      </tr>
-
-      <tr>
-        <td colspan="2">Sam</td>
-
-      </tr>
-    </tbody>
-    <tfoot>
-         <tr>
-        <td colspan="2">Sam</td>
-        <td rowspan="2">foot</td>
-
-      </tr>
-    </tfoot>
-    <tfoot>
-      footer
-    </tfoot>
-  </table>
-
-
-  <ul type="square">
-    <li>Shiva</li>
-    <li>Rohan</li>
-    <li>Shubham</li>
-  </ul>
-  <ol type="A">
-    <li>Shiva</li>
-    <li>Rohan</li>
-    <li>Shubham</li>
-  </ol>
+    <h1>shiva</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim nihil odit cupiditate amet ex beatae repudiandae fugiat similique et, quisquam dolorem explicabo exercitationem praesentium quidem molestiae ipsum! Exercitationem, fuga, deserunt impedit molestiae cum aliquam veniam, expedita deleniti tenetur ducimus modi nam? Corporis nesciunt perferendis molestias.</p>
 </body>
-
 </html>
