--- a/index.html
+++ b/index.html
@@ -1,47 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inline and Block Elements - HTML</title>
+    <title>ID and Classes in HTML</title>
     <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-    <P>hey I am a Para</P>
-    <a href="https://google.com">Google</a>
-    <div>I am a Block Element</div>
-    <span>I am a Span and I am Inline</span>
-    <a href="">yes he is Inline</a>
-    <form action="null">
-        <div>
-            <div>
-                <label for="username">enter your name:</label>
-                <div>
-                    <input type="text" id="username" />
-                    <div>
-                        <div>
-                            <div>
-                                <label for="usercity">enter your city:</label>
-                                <div>
-                                    <label for="usercity">city</label>
-                                </div>
-                                <input type="text">id="usercity" />
-                            </div>
-                        </div>
-                        <div>
-                            <div>
-                                <label for="userpincode">pincode</label>
-                            </div>
-                            <input type="text" id="userpincode" />
-                    </div>
-                    <div>
-                        <input type="submit" />
-                        <input type="reset" />
-                    </div>
-    </form>
-
+    <div id="firstdiv" class="red bg-yellow">First</div>
+    <div id="seconddiv">Second</div>
+    <span class="red"></span>
 </body>
-
 </html>
