--- a/index.html
+++ b/index.html
@@ -1,43 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS boxmodel</title>
+    <title>CSS selectors</title>
     <style>
-        *{
-            margin:0;
+        /* Element Selectors */
+        div{
+            /* background-color: red; */
+        }         
+        /* Class Selector */
+        .red{
+            background-color: red;
+        }
+        /* ID Selector */
+        #Green{
+            background-color: green;
+        }
+        /* Child Selector */
+        div > p{
+            color: blue;
+            background-color: brown;
+        }
+        /* Desendant Selector */
+        div p{
+            color: blue;
+            background-color: brown;
+        }
+        /* Universal Selector */
+        * {
+            margin: 0;
             padding: 0;
         }
-    </style>
-    <style>
-        .box {
+
+        /* Pseudo Selector */
+        a:visited{
+            color: yellow;
+        }
+        a:link{
+            color: green;
+        }
+
+        a:active{
+            background-color: red;
+        }
+
+        a:hover{
+            background-color: yellow;
+        }
+
+        p:first-child{
             background-color: aqua;
         }
-        .box1{
-            color: yellow;
-            padding: 10px;
-            margin: 35px;
-            border: 2px solid blue;
-            height: 200px;
-            box-sizing: border-box;
-        }
-        .box2{
-            color: red;
-              padding: 10px;
-            margin: 25px;
-            border: 2px solid black;
-            height: 200px;
-            box-sizing: border-box;
-        }
+
     </style>
 </head>
-
 <body>
-    <div class="box box1">I am a box</div>
-    <div class="box box2">I am another box</div>
+    <main class="one">
+        <p>I am first</p>
+        <p>I am second</p>
+    </main>
+    <div class="red">
+        I am a div
+        <article>
 
+            <p>I am a para inside div.</p>
+        </article>
+    </div>
+
+    <div id ="Green">
+        I am another div
+    </div>
+    <a href="https://www.google.com">Go to Google</a>
+    <a href="https://www.Facebook2.com">Go to Facebook</a>
+    
 </body>
-
 </html>
