--- a/index.html
+++ b/index.html
@@ -3,76 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS selectors</title>
-    <style>
-        /* Element Selectors */
-        div{
-            /* background-color: red; */
-        }         
-        /* Class Selector */
-        .red{
-            background-color: red;
-        }
-        /* ID Selector */
-        #Green{
-            background-color: green;
-        }
-        /* Child Selector */
-        div > p{
-            color: blue;
-            background-color: brown;
-        }
-        /* Desendant Selector */
-        div p{
-            color: blue;
-            background-color: brown;
-        }
-        /* Universal Selector */
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        /* Pseudo Selector */
-        a:visited{
-            color: yellow;
-        }
-        a:link{
-            color: green;
-        }
-
-        a:active{
-            background-color: red;
-        }
-
-        a:hover{
-            background-color: yellow;
-        }
-
-        p:first-child{
-            background-color: aqua;
-        }
-
-    </style>
+    <title>Document</title>
 </head>
 <body>
-    <main class="one">
-        <p>I am first</p>
-        <p>I am second</p>
-    </main>
-    <div class="red">
-        I am a div
-        <article>
-
-            <p>I am a para inside div.</p>
-        </article>
+    <h1>My videos and audios for the day </h1>
+    <h2>Some videos for the day</h2>
+    <div>
+        <video Width="239"src="DSC_1339.MOV" controls></video>
+        <video Width="239"src="DSC_1340.MOV" controls></video>
+        <video Width="239"src="DSC_1341.MOV" controls></video>
+        <video Width="239"src="DSC_1342.MOV" controls></video>
+        <video Width="239"src="DSC_1368.MOV" controls></video>
     </div>
-
-    <div id ="Green">
-        I am another div
+    <h2>Some audios for the day</h2>
+    <div>
+        <audio src="DSC_1339.MOV" controls></audio>
+        <audio src="DSC_1340.MOV" controls></audio>
+        <audio src="DSC_1341.MOV" controls></audio>
+        <audio src="DSC_1342.MOV" controls></audio>
+        <audio src="DSC_1368.MOV" controls></audio>
     </div>
-    <a href="https://www.google.com">Go to Google</a>
-    <a href="https://www.Facebook2.com">Go to Facebook</a>
-    
 </body>
 </html>
