--- a/index.html
+++ b/index.html
@@ -3,25 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta name="Description" content="this is the page about content about shiva - the sigma">
+    <title>About Shiva - CodeWithShiva</title>
 </head>
 <body>
-    <h1>My videos and audios for the day </h1>
-    <h2>Some videos for the day</h2>
-    <div>
-        <video Width="239"src="DSC_1339.MOV" controls></video>
-        <video Width="239"src="DSC_1340.MOV" controls></video>
-        <video Width="239"src="DSC_1341.MOV" controls></video>
-        <video Width="239"src="DSC_1342.MOV" controls></video>
-        <video Width="239"src="DSC_1368.MOV" controls></video>
-    </div>
-    <h2>Some audios for the day</h2>
-    <div>
-        <audio src="DSC_1339.MOV" controls></audio>
-        <audio src="DSC_1340.MOV" controls></audio>
-        <audio src="DSC_1341.MOV" controls></audio>
-        <audio src="DSC_1342.MOV" controls></audio>
-        <audio src="DSC_1368.MOV" controls></audio>
-    </div>
+    <h1>shiva</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim nihil odit cupiditate amet ex beatae repudiandae fugiat similique et, quisquam dolorem explicabo exercitationem praesentium quidem molestiae ipsum! Exercitationem, fuga, deserunt impedit molestiae cum aliquam veniam, expedita deleniti tenetur ducimus modi nam? Corporis nesciunt perferendis molestias.</p>
 </body>
 </html>
