--- a/index.html
+++ b/index.html
@@ -1,14 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ID and Classes in HTML</title>
-    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
+
 <body>
-    <div id="firstdiv" class="red bg-yellow">First</div>
-    <div id="seconddiv">Second</div>
-    <span class="red"></span>
+    <video src="DSC_1426.MOV" height="555" controls loop muted poster="DSC_5290.JPG"></video>
+    <audio src="DSC_1426.MOV" controls autoplay loop muted></audio>
+
+    <svg height="100" width="100">
+        <circle cx="50" cy="50" r="40" stroke="black" stroke-width="3" fill="red" />
+    </svg>
+    <img src="img.svg" alt="my svg image">
+
+    <!-- <iframe src="https://www.codewithharry.com/" width="322" height="444"></iframe> -->
+     <iframe src="https://www.youtube.com/embed/tVzUXW6siu0?si=ZeWG_DcFpP5sc3kS&amp;start=1839" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+     
+    
 </body>
+
 </html>
