--- a/index.html
+++ b/index.html
@@ -1,22 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-    <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Collision8-Bit.ogg" controls loop muted></audio>
-    <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" controls loop muted></audio>
-    <audio src="http://commondatastorage.googleapis.com/codeskulptor-demos/DDR_assets/Sevish_-__nbsp_.mp3" controls loop muted></audio>
-    <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/week7-button.m4a" controls loop muted></audio>
-    <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/week7-bounce.m4a" controls loop muted></audio>
-    <audio src="http://commondatastorage.googleapis.com/codeskulptor-assets/jump.ogg" controls loop muted></audio>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/5NTulUzQimY?si=1fldsp0_z5H1fWYJ" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/MUMCZZl9QCY?si=k7Prlz3wWuupRqVq" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/UTtIUN6SYQQ?si=8Te2M2BKKyRLA41P" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/X8BYu3dMKf0?si=UEk0aCy0kmUmwuCa" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/QDXAMYOvf5g?si=UqQ1SI-rfcUFEdI4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/4xJUzAq5kqI?si=-hZwQ-ou4vg7evvH" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+    3>4
+    this is the code for paragraph &lt;p&gt;&lt;/p&gt;
+    <pre>
+        <pre>this is a para</pre>
+
+
+
+    this is the after few new lines and some more
+    </pre>
+    copyright &copy;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;codewithharry
+    <blockquote cite="source-url">
+        Quatation text here.
+    </blockquote>
+    <h1>This is the HTML boiler plate code</h1>
+    <pre><code>
+    &lt;!DOCTYPE html&gt;
+&lt;html lang="en"&gt;
+&lt;head&gt;
+&lt;meta charset="UTF-8"&gt;
+&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
+&lt;title&gt;Document&lt;/title&gt;
+&lt;/head&gt;
+&lt;body&gt;
+
+&lt;/body&gt;
+&lt;/html&gt;   
+    </code></pre>
 </body>
+
 </html>
