--- a/index.html
+++ b/index.html
@@ -1,40 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>CSS</title>
+    <style>
+        div, span {
+            color: red;
+            background-color: yellow;
+        }
+    </style>
 </head>
-
 <body>
-    3>4
-    this is the code for paragraph &lt;p&gt;&lt;/p&gt;
-    <pre>
-        <pre>this is a para</pre>
-
-
-
-    this is the after few new lines and some more
-    </pre>
-    copyright &copy;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;codewithharry
-    <blockquote cite="source-url">
-        Quatation text here.
-    </blockquote>
-    <h1>This is the HTML boiler plate code</h1>
-    <pre><code>
-    &lt;!DOCTYPE html&gt;
-&lt;html lang="en"&gt;
-&lt;head&gt;
-&lt;meta charset="UTF-8"&gt;
-&lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;
-&lt;title&gt;Document&lt;/title&gt;
-&lt;/head&gt;
-&lt;body&gt;
-
-&lt;/body&gt;
-&lt;/html&gt;   
-    </code></pre>
+    <div>
+        Hey i am harry and today i am in CSS Mood
+    </div>
+    <div>
+        I am good
+    </div>
+    <span>
+        I am also good
+    </span>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam repellat voluptates distinctio adipisci nam recusandae ratione nostrum provident neque quod quam nisi exercitationem officia blanditiis rem eius, dolor culpa nemo iste. Dolorem nihil delectus doloremque repellat facere accusamus minima placeat eaque porro consequuntur.</p>
+    
 </body>
-
 </html>
