--- a/index.html
+++ b/index.html
@@ -3,25 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CSS</title>
-    <style>
-        div, span {
-            color: red;
-            background-color: yellow;
+    <title>Document</title>
+    <!-- <style>
+        h1{
+            background-color: red;
+            color: yellow;
         }
-    </style>
+    </style> -->
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <h1>Three ways to add css to HTML</h1>
     <div>
-        Hey i am harry and today i am in CSS Mood
+        <ol>
+            <li>Inline CSS</li>
+            <li>Internal CSS</li>
+            <li>External CSS</li>
+        </ol>
     </div>
-    <div>
-        I am good
-    </div>
-    <span>
-        I am also good
-    </span>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam repellat voluptates distinctio adipisci nam recusandae ratione nostrum provident neque quod quam nisi exercitationem officia blanditiis rem eius, dolor culpa nemo iste. Dolorem nihil delectus doloremque repellat facere accusamus minima placeat eaque porro consequuntur.</p>
-    
+    <p>Everyone is good in some way or other. Does make any sense?</p>
 </body>
 </html>
+
+
