--- a/index.html
+++ b/index.html
@@ -1,28 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <!-- <style>
-        h1{
-            background-color: red;
-            color: yellow;
+    <title>Fonts</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Baloo+Bhai+2:wght@400..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+
+        h1 {
+            font-family: 'Poppins', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
         }
-    </style> -->
-    <link rel="stylesheet" href="style.css">
+
+        p {
+            /* font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; */
+            font-family: 'Baloo Bhai 2', sans-serif;
+            font-size: 20px;
+            /* font-style: italic;
+            font-weight: 500; */
+        }
+
+        h2 {
+            text-align: center;
+            text-transform: uppercase;
+            text-decoration: underline;
+            text-decoration-color: blue;
+            /* text-decoration-style: dotted; */
+            text-decoration-thickness: 7px;
+            /* text-indent: 45px; */
+        }
+
+        .lorem {
+            border: 2px solid red;
+            width: 145px;
+            word-break: break-all;
+            /* text-overflow: ellipsis;
+            overflow: hidden; */
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Three ways to add css to HTML</h1>
     <div>
-        <ol>
-            <li>Inline CSS</li>
-            <li>Internal CSS</li>
-            <li>External CSS</li>
-        </ol>
+        <h1>Fonts</h1>
+        <h2>about Fonts</h2>
+        <p>This is a vedio on Fonts</p>
+        <p class="lorem">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nostrum facere ad ea inventore.
+            Delectus non dolore
+            quam ullam eveniet consequuntur tempora laborum laboriosam sit assumenda voluptates, exercitationem harum
+            modi voluptate qui nam minus perspiciatis reiciendis fuga sunt maxime praesentium. Nulla ex accusamus hic ea
+            placeat.</p>
     </div>
-    <p>Everyone is good in some way or other. Does make any sense?</p>
+
 </body>
+
 </html>
-
-
